<resources>
    <string name="app_name">MyWallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hi">Hi there,&#160;</string>
    <string name="dummy">dummy</string>
    <string name="add_expenditures">Add\nExpenditures</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="leisure">Leisure</string>
    <string name="e_g_fika">e.g. Fika</string>
    <string name="dateformat">yyyy-mm-dd</string>
    <string name="education">Education</string>
    <string name="travel">Travel</string>
    <string name="accommodation">Accommodation</string>
    <string name="fashion">Fashion</string>
    <string name="other">Other</string>
    <string name="save">Save</string>
    <string name="e_g_250">e.g. 250</string>
    <string name="add_expenditure">Add Expenditure</string>
    <string name="salary">Salary</string>
    <string name="e_g_competition_prize">e.g. Competition Prize</string>
    <string name="e_g_1200">e.g. 1200</string>
    <string name="add_income">Add Income</string>
    <string name="grocery">Grocery</string>
    <string name="entertain">Entertainment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="overview">Overview</string>
    <string name="here_s_the_summary_of_your_finance_this_month">Here\'s the summary of your finance so far!</string>
    <string name="expenses_and_revenues">Expenses and Revenues</string>
    <string name="revenues">Revenues</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="delete_all">Delete All</string>
    <string name="choose_dates">Choose dates to see your income!</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="select_date">select date</string>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="welcome">Welcome to MyWallet App!</string>
    <string name="opening_message">We would like to get to know you better.</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="john">John</string>
    <string name="how_much_is_your_current_saving">How much is your current saving?</string>
    <string name="_1000">1000</string>
    <string name="yyyy">yyyy</string>
    <string name="mm">mm</string>
    <string name="dd">dd</string>
    <string name="firstname">Firstname</string>
    <string name="surname">Surname</string>
    <string name="selectdate">Select Date</string>
    <string name="savings">Savings</string>
    <string name="show_all">Show all</string>
    <string name="choose_dates_exp">Choose dates to see your expenses!</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="month">Month:</string>
    <string name="x">Food</string>

    <string-array name="Months">
        <item>Choose Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="Currency">
        <item>Indonesian Rupiah (IDR)</item>
        <item>US Dollar (USD)</item>
        <item>Euro</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>
</resources>
