<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivityClasses.IncomeFragmentClasses.IncomeFragment">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/deleteAllIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all" />

        <Button
            android:id="@+id/buttonShowAllInc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/show_all" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/choose_dates"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/from" />

        <TextView
            android:id="@+id/tvFromDateInc"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:drawableRight="@drawable/ic_dropdown"
            android:drawableTint="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/select_date"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_gravity="center_vertical"
            android:text="@string/to" />

        <TextView
            android:id="@+id/tvToDateInc"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:drawableRight="@drawable/ic_dropdown"
            android:drawableTint="@color/colorPrimary"
            android:paddingLeft="10dp"
            android:layout_gravity="center_vertical"
            android:text="@string/select_date"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_saveDateInc"
        android:layout_width="35dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:drawableLeft="@drawable/ic_check"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:paddingLeft="5dp"
        android:textAlignment="center"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/amount"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvIncome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>