<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityClasses.BetweenDatesClasses.BetweenDatesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="@color/thegreen">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/amount"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvShowFromDates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </ListView>


</LinearLayout>