<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityClasses.OverviewFragment"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp">

            <TextView
                android:id="@+id/tvHi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hi"
                android:textAlignment="viewEnd"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy"
                android:textAlignment="viewStart"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingTop="20dp"
            android:text="@string/here_s_the_summary_of_your_finance_this_month"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/layout_bg"
            android:baselineAligned="false"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/expenses_and_revenues"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:text="@string/revenues"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:layout_weight="1"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <TextView
                    android:id="@+id/totExp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/totSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/totRev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dummy"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:padding="10dp"
            android:text="@string/monthly_summary"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/month_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/Months"
                android:theme="@style/AppTheme"></Spinner>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/piechart_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:padding="10dp"
                android:layout_margin="15dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.154">

            <Button
                android:id="@+id/btnAddIncome"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="30dp"
                android:layout_weight="1"
                android:background="@color/thegray"
                android:drawableTop="@drawable/ic_add"
                android:drawableTint="@color/colorPrimary"
                android:padding="15dp"
                android:text="@string/income"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/btnAddExpenditure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="50dp"
                android:layout_weight="1"
                android:background="@color/thegray"
                android:drawableTop="@drawable/ic_add"
                android:drawableTint="@color/colorPrimary"
                android:padding="15dp"
                android:text="@string/expenses"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>