<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingClasses.OnBoardingActivity"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="240dp"
            android:src="@drawable/mywallet_logo" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo"
            android:text="@string/welcome"
            android:textColor="@color/gray"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/opening_message"
            android:textAlignment="center"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/what_s_your_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:hint="@string/john"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="18sp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="Currency:"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <Button
            android:id="@+id/chooseCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="Select Currency"/>

        <!--<RelativeLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@color/colorPrimary"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:layout_gravity="center"-->
            <!--android:padding="5dp">-->

            <!--<android.support.v7.widget.AppCompatSpinner-->
                <!--android:id="@+id/currency_spinner"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:entries="@array/Currency"-->
                <!--android:popupBackground="@color/colorPrimary" />-->

        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|bottom">

            <Button
                android:id="@+id/btnFinish"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:background="@color/colorAccent"
                android:drawableEnd="@drawable/ic_next"
                android:drawableTint="@color/white"
                android:paddingLeft="20dp"
                android:text="Finish"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>